client/src/app/shared/top-news/top-news-post-card/top-news-post-card.component.scss
@import "../../../../style/colors";
.top-news-post-card {

    height: 100%;
    position: relative;
    overflow: hidden;
    color: $white;

    a {
        color: inherit;
        text-decoration: none;
    }

    p {
        letter-spacing: 0.05rem;
    }

    .post-card-body {
        height: 100%;
    }

    .post-overview {

        top: 0;
        left: 0;
        position: absolute;
        width: 100%;
        height: 100%;
        z-index: 10;
        padding: 0 15%;
        background-image: radial-gradient(rgba(0, 0, 0, 0.05) 15%, transparent 16%),
        radial-gradient(rgba(0, 0, 0, 0.05) 15%, transparent 16%);
        background-size: 5px 5px;
        background-position: center center;
        -webkit-transition: background-color 400ms ease-out;
        -moz-transition: background-color 400ms ease-out;
        -ms-transition: background-color 400ms ease-out;
        -o-transition: background-color 400ms ease-out;
        transition: background-color 400ms ease-out;

        .post-category {
            margin-bottom: 0.5rem;
            display: inline-block;
            -webkit-transition: margin-top 400ms ease-out, margin-bottom 400ms ease-out;
            -moz-transition: margin-top 400ms ease-out, margin-bottom 400ms ease-out;
            -ms-transition: margin-top 400ms ease-out, margin-bottom 400ms ease-out;
            -o-transition: margin-top 400ms ease-out, margin-bottom 400ms ease-out;
            transition: margin-top 400ms ease-out, margin-bottom 400ms ease-out;
        }

        .post-title {
            font-size: 1.5rem;
            margin-bottom: 0.5rem;
            line-height: 1;
            -webkit-transition: transform 400ms ease-out, opacity 400ms ease-out;
            -moz-transition: transform 400ms ease-out, opacity 400ms ease-out;
            -ms-transition: transform 400ms ease-out, opacity 400ms ease-out;
            -o-transition: transform 400ms ease-out, opacity 400ms ease-out;
            transition: transform 400ms ease-out, opacity 400ms ease-out;
        }

        .creation-breadcrumb {
            margin-bottom: 0.5rem;
            transform: translateY(-100%);
            opacity: 0;
            -webkit-transition: transform 400ms ease-out, opacity 400ms ease-out;
            -moz-transition: transform 400ms ease-out, opacity 400ms ease-out;
            -ms-transition: transform 400ms ease-out, opacity 400ms ease-out;
            -o-transition: transform 400ms ease-out, opacity 400ms ease-out;
            transition: transform 400ms ease-out, opacity 400ms ease-out;
        }

    }

    .thumbnail {

        height: 100%;
        min-height: calc(10rem + 10vh);
        position: relative;
        z-index: 0;

        img {
            top: 0;
            left: 0;
            position: absolute;
            width: 100%;
            height: 100%;
            object-fit: cover;
            object-position: center center;
        }

    }

    :hover {
        .post-overview {
            background-color: rgba(83, 68, 117, 0.85);
        }
        .post-category {
            margin-top: 1rem;
            margin-bottom: 1rem;
        }
        .creation-breadcrumb{
            display: block;
            transform: translateY(0);
            opacity: 1;
        }
        .post-category {
            border-bottom: 1px solid $yellow;
        }
    }

}

// Medium devices (tablets, less than 992px)
@media (max-width: 991px) {
  .top-news-post-card {
    .thumbnail {
      min-height: calc(18rem + 10vh);
    }
  }
}

